packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/valid/single_note.mmd
---
title: "Single Note"
---

[00:00.000]
- note_on 1.C4 100 1000ms
