packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/invalid_channel.mmd
---
title: "Invalid Channel"
---

# Channel must be 1-16
[00:00.000]
- note_on 17.C4 100 1000ms
